# strands-dspy

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  Makefile  QUICKSTART.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: basic_qa_optimization.py  custom_metric.py  rag_optimization.py  run_optimization_and_show_prompts.py
examples/blueprints/: classification_blueprint.py  qa_blueprint.py
src/strands_dspy/: __init__.py  types.py
src/strands_dspy/helpers/: __init__.py  extractors.py  metrics.py  success.py
src/strands_dspy/hooks/: __init__.py  collector.py  optimizer.py
src/strands_dspy/modules/: __init__.py  programs.py  signatures.py
src/strands_dspy/optimizers/: __init__.py  gepa.py  mipro.py
src/strands_dspy/storage/: __init__.py  session_storage.py
src/strands_dspy/tools/: __init__.py  memory_tools.py
tests/: conftest.py  test_config.py
tests/fixtures/: __init__.py  golden_dataset.py  hard_dataset.py
tests/integration/: __init__.py  test_end_to_end.py  test_gepa_optimization.py  test_mipro_optimization.py  test_quick_optimization.py  test_real_optimization.py
tests/unit/: test_edge_cases.py  test_helpers.py  test_storage.py
